--- a/dissertation.bib
+++ b/dissertation.bib
@@ -262,6 +262,24 @@
   file = {/Users/christosdemetriou/Zotero/storage/M88PTMKX/Daskalakis et al. - 2021 - The complexity of constrained min-max optimization.pdf}
 }
 
+@inproceedings{deligkas_ConstantInapproximabilityPPA_2022,
+  title = {Constant Inapproximability for {{PPA}}},
+  booktitle = {Proceedings of the 54th {{Annual ACM SIGACT Symposium}} on {{Theory}} of {{Computing}}},
+  author = {Deligkas, Argyrios and Fearnley, John and Hollender, Alexandros and Melissourgos, Themistoklis},
+  year = {2022},
+  month = jun,
+  series = {{{STOC}} 2022},
+  pages = {1010--1023},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  doi = {10.1145/3519935.3520079},
+  url = {https://dl.acm.org/doi/10.1145/3519935.3520079},
+  urldate = {2025-07-09},
+  abstract = {In the {$\varepsilon$}-Consensus-Halving problem, we are given n probability measures v1, {\dots}, vn on the interval R = [0,1], and the goal is to partition R into two parts R+ and R- using at most n cuts, so that {\textbar}vi(R+) - vi(R-){\textbar} {$\leq$} {$\varepsilon$} for all i. This fundamental fair division problem was the first natural problem shown to be complete for the class PPA, and all subsequent PPA-completeness results for other natural problems have been obtained by reducing from it. We show that {$\varepsilon$}-Consensus-Halving is PPA-complete even when the parameter {$\varepsilon$} is a constant. In fact, we prove that this holds for any constant {$\varepsilon$} \&lt; 1/5. As a result, we obtain constant inapproximability results for all known natural PPA-complete problems, including Necklace-Splitting, the Discrete-Ham-Sandwich problem, two variants of the pizza sharing problem, and for finding fair independent sets in cycles and paths.},
+  isbn = {978-1-4503-9264-8},
+  file = {/Users/christosdemetriou/Zotero/storage/W6TZQSNU/Deligkas et al. - 2022 - Constant inapproximability for PPA.pdf}
+}
+
 @inproceedings{deligkas_PureCircuitStrongInapproximability_2022,
   title = {Pure-{{Circuit}}: {{Strong Inapproximability}} for {{PPAD}}},
   shorttitle = {Pure-{{Circuit}}},
