--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -1,11 +1,10 @@
-In recent years, there has been a revolutionary
-initiative in the field of combinatronics.
 Combinatronics has been a field of study in mathematics that primarily focuses on
 the notion of counting objects with certain properties. Over time, this notion
 has shifted, especially in the subfield of algebraic combinatorics, where
 there is no clear notion of the object that we are counting,
 and the numbers express something more abstract \cite{pak_WhatCombinatorialInterpretation_2022}.
-This created the need to assign combinatorial interpretations to such numbers.
+In recent years, there has been a revolutionary
+initiative in the field of combinatronics to assign combinatorial interpretations to such numbers.
 Being able to find such definitions or interpretations is very important
 as it allows us to utilise tools from combinatorics to understand
 and reveal hidden structures and properties \cite{pak_WhatCombinatorialInterpretation_2022}. 
@@ -55,8 +54,8 @@ as explained in paragraph \ref{par:count-ppad}.
 We hope that by completing these milestones, we will be able to answer our research question.
 
 \begin{enumerate}[label*=R.\arabic*)]
-    \item Find a parsimonious reduction from the $\textit{EndOfLine}$ to $\textit{PureCircuit}$.
-    \item Demonstrate that $\textsc{\#PureCircuit}- 1 \not\subseteq \textbf{\#P}$ either by:
+    \item Find a parsimonious reduction from the $\textsc{EndOfLine}$ to $\textsc{PureCircuit}$.
+    \item Demonstrate that $\textsc{\#PureCircuit}- 1 \not\subseteq \textsc{\#P}$ either by:
         \begin{enumerate}
             \item Showing that $\textsc{\#SourceOrExcess(k,1)} \subseteq \textsc{\#PureCircuit}$ for some $k \in \mathbb{N}_{\geq 2}$
             \item Showing that $\textsc{\#SourceOrExcess(k,1)} \subseteq \textsc{\#nD-StrongSperner}$ for some $k,n \in \mathbb{N}_{\geq 2}$ 
@@ -76,8 +75,8 @@ we have the following milestones:
 
 \begin{enumerate}[label=S.\arabic*)]
     \item Visualise and verify a \textsc{PureCircuit} instance.
-    \item Generate a solution given a \textsc{PureCircuit} instance.
-    \item Count the number of solutions of a  \textsc{PureCircuit}.
+    \item Generate a solution for given a \textsc{PureCircuit} instance.
+    \item Count the number of solutions of a \textsc{PureCircuit} instance.
 \end{enumerate}
 
 We will compile the rest of the report, based on our current findings, how we altered our previous objectives 
