--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -2,4 +2,4 @@ This project investigates the combinatorial structure of the \textsc{PureCircuit
 We conjecture that its circuit-based formulation can provide insights and bounds on the counting complexity of \textsc{PPAD-1}.
 In this report, we present the progress made so far, including preliminary results and ongoing developments.
 In addition, we report on the construction of a visualisation tool designed to support the exploration and formulation of these combinatorial theorems.
-Lastly we outline the current state of the project and explore the subsequent next steps.
+Lastly we outline the current state of the project and explore the subsequent steps.
