--- a/sections/appraisals.tex
+++ b/sections/appraisals.tex
@@ -13,7 +13,10 @@ As this is our first research project, we gained many valuable lessons from this
 We quickly realised that such projects require a much more extensive literature review than anticipated, 
 and in general working on multiple problems is more beneficial than focusing on one.
 Moreover, when it comes to theorising and proof development, we faced many failures.
-However, each failed attempt allowed us to understand a problem in greater depth and how to formulate our subsequent attempts to solve our problem.
+We understood that one has not only show the correctness of their proof but also its implications
+and whether those are reasonable.
+However, each failed attempt allowed us to understand our problem in greater depth and
+helped refine our attack vector of solving it.
 Lastly, developed a methodology to research more effectively. We often found it helpful
 to utilise our canvas tools as seen in \ref{fig:theory:obsidian-canvas}, where
 a bird's-eye approach allowed us to make connections between problems more effectively.
