--- a/sections/lit_review.tex
+++ b/sections/lit_review.tex
@@ -31,7 +31,7 @@ where each solution can be verified in polynomial time, or more formally:
 
 Given the above definition, Pak et al. \cite{pak_WhatCombinatorialInterpretation_2022, ikenmeyer_PositivitySymmetricGroup_2024}
 used $\textsc{\#P}$ to interpret $A_w$ as the set of solutions to a problem given input $w$.
-Moreover, they argue that:
+Moreover, they argue that the usage of $\textsc{\#P}$ has several benefits such as:
 
 \begin{enumerate}
     \item By polynomially bounding words, we avoid cases such as: $f(w) = |\{1, \hdots, f(w)\}|$.
