--- a/sections/lit_review.tex
+++ b/sections/lit_review.tex
@@ -260,7 +260,8 @@ for the sake of clarity.
 \end{definitionbox}
 
 Deligkas et al. \cite{deligkas_PureCircuitTightInapproximability_2024, deligkas_ConstantInapproximabilityPPA_2022} showed that
-$\forall A \subseteq S^d: |A| \geq d+1$ and satisfies the colouring, $\exists D \subseteq A: |D| = d$.
+$\forall A \subseteq S^d: |A| \geq d+1$ and satisfies the colouring, $\exists D \subseteq A: |D| = d$ where $D$ also satisfies
+the colouring condition.
 
 \begin{definitionbox}{\textsc{StrongSperner} problem}{strong-sperner}
     \textbf{Input}: A boolean circuit that computes a bipolar labelling $\lambda: [M]^N \to \{-1, 1\}^N$ \ref{def:bipolar-colouring}
