--- a/sections/appraisals.tex
+++ b/sections/appraisals.tex
@@ -1,11 +1,11 @@
 \subsection{Reflections}
 
-Overall we progresesd slower than originally anticipated. This 
-is due to our lack of experience with the subject and with reseach projects in general.
+Overall we progressed slower than originally anticipated. This 
+is due to our lack of experience with the subject and with research projects in general.
 In our original gantt chart, we had anticipated the software portion of our project
 to be nearing completion. We were not able to meet the deadline due to the complexity
 of the topic. In hindsight, this allowed us to refine our project and plan ahead
-for more effectievly. 
+for more effectively. 
 
 \subsection{Lessons Learned}
 
@@ -13,14 +13,14 @@ As this is our first research project, we gained many valuable lessons from this
 We quickly realised that such projects require a much more extensive literature review than anticipated, 
 and in general working on multiple problems is more beneficial than focusing on one.
 Moreover, when it comes to theorising and proof development, we faced many failures.
-We understood that one has not only show the correctness of their proof but also its implications
+We understood that one not only has to show the correctness of their proof but also its understand its implications
 and whether those are reasonable.
-However, each failed attempt allowed us to understand our problem in greater depth and
-helped refine our attack vector of solving it.
+However, from each failed attempt, we were able to comprehend our problem in greater depth, refining our next steps more effectively.
 Lastly, developed a methodology to research more effectively. We often found it helpful
 to utilise our canvas tools as seen in \ref{fig:theory:obsidian-canvas}, where
 a bird's-eye approach allowed us to make connections between problems more effectively.
-We hope that the remaining duration of the project will reflect our the aforementioned realisations.
+We hope that the remaining duration of the project will reflect our aforementioned realisations
+and allow us to achieve our milestones.
 
 
 % Over the last couple of months I made a lot of mistakes whilst working with the project.
